samsung: Add state notifier driver
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: Luca Grifo <lg@linux.com>
Signed-off-by: djb77 <dwayne.bakewell@gmail.com>
Signed-off-by: prashantpaddune <padadunep@gmail.com>

--- a/drivers/soc/samsung/Kconfig
+++ b/drivers/soc/samsung/Kconfig
@@ -230,4 +230,8 @@ config BOOTINFO
       from both kernel context (via function call) and user
       context (via /proc/bootinfo).
 
+config STATE_NOTIFIER
+	bool "State Notifier"
+	default n
+
 endif
