--- a/arch/arm64/configs/troika_defconfig
+++ b/arch/arm64/configs/troika_defconfig
@@ -84,6 +84,11 @@ CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL=y
 CONFIG_FREQVAR_TUNE=y
 CONFIG_ARM_EXYNOS_ACME=y
+CONFIG_ARM_MODCLOCK=y
+CONFIG_MAX_FREQ_BIG=2496000
+CONFIG_MIN_FREQ_BIG=728000
+CONFIG_MAX_FREQ_LITTLE=2054000
+CONFIG_MIN_FREQ_LITTLE=403000
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_UNIX=y
